--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Information</h2>
-          <p>Chiropractors are health care professionals who adjust the spine and other parts of the body with the goal of correcting alignment problems, easing pain, and supporting th body's natural ability to heal itself. They may also recommend treatment including heat and ice, relaxation techniques, exercises, dietary changes, and supplements. People visit chiropractors for treatment of low back pain, neck pain, and headaches.</p>
+          <p>Chiropractors are health care professionals who adjust the spine and other parts of the body with the goal of correcting alignment problems, easing pain, and supporting the body's natural ability to heal itself. They may also recommend treatment including heat and ice, relaxation techniques, exercises, dietary changes, and supplements. People visit chiropractors for treatment of low back pain, neck pain, and headaches.</p>
             <!--tablet/desktop content The doctors assist automobile accident victims with their injuries and communicate the scope of care with the attorneys.--> 
           
         </div>
